fixed performance issues, refactored code